--- a/BQN386.sfdir/font.props
+++ b/BQN386.sfdir/font.props
@@ -22,7 +22,7 @@ OS2Version: 1
 OS2_WeightWidthSlopeOnly: 0
 OS2_UseTypoMetrics: 0
 CreationTime: 1366486900
-ModificationTime: 1699089307
+ModificationTime: 1699092628
 PfmFamily: 17
 TTFWeight: 400
 TTFWidth: 5
@@ -902,7 +902,7 @@ NameList: AGL For New Fonts
 DisplaySize: -36
 AntiAlias: 1
 FitToEm: 1
-WinInfo: 8640 32 10
+WinInfo: 8608 32 10
 BeginPrivate: 6
 BlueValues 23 [-20 0 478 490 668 684]
 OtherBlues 11 [-216 -172]
@@ -911,5 +911,11 @@ StdHW 4 [87]
 StemSnapV 14 [81 87 92 172]
 StdVW 4 [87]
 EndPrivate
+Grid
+-1000 272 m 0
+ 2000 272 l 1024
+-1000 331.499969482 m 0
+ 2000 331.499969482 l 1024
+EndSplineSet
 TeXData: 1 0 0 629145 314572 209715 498074 1048576 209715 783286 444596 497025 792723 393216 433062 380633 303038 157286 324010 404750 52429 2506097 1059062 262144
 EndSplineFont
